# lgpdoc

./: .gitignore  CLAUDE.md  LICENSE  README.md  bootstrap.sh  pyproject.toml  start-anom.sh
apps/reviewer-ui/: .env.example  README.md  package-lock.json  package.json
docs/: local_setup.md  pipeline.md  project-context.md
documentacao-obsidian/: 00 - Início.md  01 - Visão geral.md  02 - Instalação.md  03 - Arquitetura.md  04 - Pipeline de detecção.md  05 - Detectores.md  06 - OPF runtime toggle.md  07 - Modos de processamento.md  08 - Containers.md  09 - Modo de comparação.md  10 - Configurações.md  11 - API.md  12 - Banco de dados.md  13 - Privacidade.md  14 - Frontend.md  15 - Testes.md  16 - Desenvolvimento.md  Glossário.md
documentacao-obsidian/.obsidian/: graph.json  workspace.json
examples/: synthetic_contract.docx
policies/: default.yaml
scripts/: anonymize_document.py  anonymize_file.py  anonymize_text.py  install.ps1  opf_worker.py  run_api.py  start-anom.ps1
tests/: conftest.py  test_api.py  test_api_detector_comparison.py  test_augmentations.py  test_container_documents.py  test_container_export.py  test_container_marker_resolver.py  test_container_normalizers.py  test_container_pseudonymized_documents.py  test_container_restore.py  test_container_validation.py  test_containers_api.py  test_detector_comparison.py  test_extractors.py  test_job_reprocess.py  test_log_privacy.py  test_markdown_helper.py  test_mode_separation.py  test_ocr.py  test_opf_manager.py  test_pipeline.py  test_privacy_filter_client.py  test_redactor.py  test_regex_detectors.py  test_reversible.py  test_risk.py  test_rules.py  test_settings.py  test_ui_invariants.py  test_verification.py
(+84 files in other folders)
